Bug 90253 - Drawing a textbox in Impress doesnt retain its height
Summary: Drawing a textbox in Impress doesnt retain its height
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: medium normal
Assignee: Bayram Çiçek
URL:
Whiteboard: target:7.6.0
Keywords: topicUI
Depends on:
Blocks: Textbox
  Show dependency treegraph
 
Reported: 2015-03-26 11:36 UTC by Yousuf Philips (jay) (retired)
Modified: 2023-04-18 08:12 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2015-03-26 11:36:55 UTC
1) Open Impress
2) Select the textbox button in the drawing toolbar
3) Draw a textbox
4) Notice that the height set when drawing has minimize to the height of one line of text

This behaviour doesnt happen in Draw.

Version: 4.5.0.0.alpha0+
Build ID: 38c22ed2b8b8f3530b8a0fe5a23a329e8e511c76
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2015-03-24_13:02:39
Comment 1 A (Andy) 2015-03-26 19:02:10 UTC
Reproducible with LO 4.4.1.2, Win 8.1.

But I am not sure which behaviour is better.  

@Jay: Why would you prefer the DRAW solution?
Comment 2 Yousuf Philips (jay) (retired) 2015-03-27 06:46:40 UTC
Well its not only in draw that it works this way, it works this way in writer and calc, so impress is the odd one out. ;D
Comment 3 Yousuf Philips (jay) (retired) 2016-02-22 23:32:07 UTC
Also the "Fit Text to Frame" (.uno:TextFitToSizeTool) command found in the Text toolbar retains its height when drawing the textbox.
Comment 4 QA Administrators 2017-03-06 14:59:25 UTC Comment hidden (noise)
Comment 5 Mike 2018-07-26 17:20:20 UTC
Confirmed.

Version: 6.1.0.2 (x64)
Build ID: b3972dcf1284967612d5ee04fea9d15bcf0cc106
CPU threads: 4; OS: Windows 10.0; UI render: GL; 
Locale: de-DE (de_DE); Calc: group threaded
Comment 6 QA Administrators 2019-07-30 03:13:41 UTC Comment hidden (noise)
Comment 7 Regina Henschel 2019-07-30 19:33:20 UTC
The problem still exists as described in Version: 6.4.0.0.alpha0+ (x64)
Build ID: 9105b85c708f42024ce063b9a944466c0afdfe9a
CPU threads: 8; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-06-28_22:42:37
Locale: de-DE (en_US); UI-Language: en-US
Calc: CL
Comment 8 QA Administrators 2021-07-30 06:22:59 UTC Comment hidden (obsolete)
Comment 9 Mike 2021-08-07 17:05:37 UTC
confirmed.

Version: 7.1.2.2 (x64) / LibreOffice Community
Build ID: 8a45595d069ef5570103caea1b71cc9d82b2aae4
CPU threads: 12; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: CL
Comment 10 Telesto 2021-08-20 08:02:25 UTC
Also in
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: f58f35b2c8ca1efbacec642a8f3de5b0c499bc6b
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL

and in
LibreOffice 3.5.7.2 
Build ID: 3215f89-f603614-ab984f2-7348103-1225a5b

---
@Heiko
Something for the papercut list?
Comment 11 Heiko Tietze 2021-08-20 09:01:27 UTC
(In reply to Telesto from comment #10)
> Something for the papercut list?

Doubt that but I might be wrong
Comment 12 Bayram Çiçek 2021-08-20 10:52:59 UTC
IMHO, it seems that it can be a papercuts bug.
adding this bug into my TODO list. I'll have a look at it asap.
Comment 13 Bayram Çiçek 2023-04-14 04:55:41 UTC
patch: https://gerrit.libreoffice.org/c/core/+/150377 needs feedback & review.

Thanks.
Comment 14 Commit Notification 2023-04-17 23:19:05 UTC
Bayram Çiçek committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/059f99991e8f291404addeba9341d2c4989976af

tdf#90253: Impress: make TextBox retain its height

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Heiko Tietze 2023-04-18 06:37:23 UTC
(In reply to Commit Notification from comment #14)
> Bayram Çiçek committed a patch

You patch fixes the issue? Please resolve then.

(Sorry, haven't had time to look into it yet.)