tdf#90253: Impress: make TextBox retain its height

- [Impress] drawing a new Text Box and Vertical Text
minimize itself to the height of one line.

- This behavior has changed and inserting a
new TextBox/VerticalText does not shrink itself to
height of one line.

- Unified some common Draw and Impress codes

- removed unnecessary ImpSetAttributesFitCommon(pText)
function, as ImpSetAttributesForNewTextObject(pText)
takes care of the Text Box creations.

- SID_ATTR_CHAR (.uno:Text)
- SID_ATTR_CHAR_VERTICAL (.uno:VerticalText)

Change-Id: Ia944c2b64d5b1fa6970f6afabf41d36bf1643efa
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150377
Tested-by: Jenkins
Reviewed-by: Maxim Monastirsky <momonasmon@gmail.com>